--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,12 +3,38 @@ import MainLayout from '@layouts/MainLayout.astro';
 ---
 
 <MainLayout
-  title="404 | Kevin Fiorentino"
-  description="Page 404"
+  title="Page not found | Kevin Fiorentino"
+  description="Page not found"
+  image=""
 >
-  <h1 class="text-gradient">
+  <h1 class="sr-only">
     404
   </h1>
+  <div class="flex">
+
+    <svg viewBox="0 0 133 107" xmlns="http://www.w3.org/2000/svg" width="50%">
+      <g class="fill-black dark:fill-white" transform="matrix(1,0,0,1,0,0)">
+        <path fill-rule="nonzero" d="M0,0 H133 V107 H0,0 z M4,4 v99 h125 v-99 z"></path>
+      </g>
+      <g class="fill-black dark:fill-white" transform="matrix(2.0455242763992207,0,0,2.0455242763992207,18.558120047205367,-6.456062084857923)">
+        <path d="M-0.76172 48.3984 l19.531 -38.398 l6.6797 0 l-19.531 38.398 l-6.6797 0 z M48.1255 10.352 l0 5.8398 l-16.641 8.418 l16.641 8.4375 l0 5.918 l-22.07 -11.172 l0 -6.3477 z"></path>
+      </g>
+    </svg>
+
+    <svg viewBox="0 0 266 142" preserveAspectRatio="xMidYMid meet">
+      <g class="fill-black dark:fill-white" transform="matrix(1,0,0,1,265,0)">
+        <rect xmlns="http://www.w3.org/2000/svg" y="0" height="1" width="1" opacity="0"></rect>
+        <rect xmlns="http://www.w3.org/2000/svg" y="0" x="-185" width="3" height="142"></rect>
+      </g>
+      <g class="fill-black dark:fill-white" transform="matrix(3.284287929534912,0,0,3.284287929534912,95.37256905138975,22.534418345960596)">
+        <path d="M7.92 20 l0 -2.68 l-7.12 0 l0 -3.1 l5.48 -9.82 l5.5 0 l0 9.18 l1.8 0 l0 3.74 l-1.8 0 l0 2.68 l-3.86 0 z M5.52 13.58 l2.4 0 l0 -4.24 z M23.606 20.3 c-1.06 0 -2 -0.22 -2.84 -0.68 c-0.86 -0.44 -1.54 -1.04 -2.08 -1.8 s-0.94 -1.62 -1.22 -2.58 s-0.42 -1.98 -0.42 -3.04 s0.14 -2.06 0.42 -3.02 s0.68 -1.82 1.22 -2.58 s1.22 -1.36 2.08 -1.82 c0.84 -0.46 1.78 -0.68 2.84 -0.68 c1.38 0 2.6 0.38 3.62 1.16 s1.78 1.78 2.28 2.98 c0.48 1.22 0.72 2.54 0.72 3.96 s-0.24 2.74 -0.72 3.94 c-0.5 1.22 -1.26 2.2 -2.28 2.98 s-2.24 1.18 -3.62 1.18 z M23.606 16.44 c0.76 0 1.38 -0.38 1.88 -1.16 c0.5 -0.76 0.74 -1.78 0.74 -3.08 s-0.24 -2.32 -0.74 -3.08 s-1.12 -1.14 -1.88 -1.14 s-1.38 0.38 -1.86 1.14 s-0.72 1.78 -0.72 3.08 s0.24 2.32 0.72 3.08 c0.48 0.78 1.1 1.16 1.86 1.16 z M40.812000000000005 20 l0 -2.68 l-7.12 0 l0 -3.1 l5.48 -9.82 l5.5 0 l0 9.18 l1.8 0 l0 3.74 l-1.8 0 l0 2.68 l-3.86 0 z M38.412000000000006 13.58 l2.4 0 l0 -4.24 z"></path>
+      </g>
+      <g class="fill-black dark:fill-white" transform="matrix(0.5438328981399536,0,0,0.5438328981399536,97.06460736190083,96.13943949385765)">
+        <path d="M3.66 7.300000000000001 l0 4.98 l3.86 0 c1.74 0 2.92 -0.64 2.92 -2.58 c0 -1.82 -1.24 -2.4 -2.84 -2.4 l-3.94 0 z M3.66 13.940000000000001 l0 6.06 l-1.94 0 l0 -14.36 l6.46 0 c2.66 0 4.26 1.72 4.26 4.04 c0 2 -1.14 4.26 -4.26 4.26 l-4.52 0 z M26.212 15.82 l-5.76 0 l-1.5 4.18 l-2 0 l5.4 -14.36 l2.2 0 l5.2 14.36 l-2.12 0 z M21.052 14.1 l4.46 0 l-2.12 -6.32 l-0.04 0 z M41.124 13.98 l0 -1.66 l6.3 0 l0 7.68 l-1.26 0 l-0.46 -1.86 c-0.98 1.36 -2.78 2.24 -4.74 2.24 c-2.46 0 -3.66 -0.9 -4.4 -1.62 c-2.2 -2.08 -2.26 -4.54 -2.26 -6.06 c0 -3.5 2.12 -7.44 6.8 -7.44 c2.68 0 5.66 1.52 6.08 4.74 l-1.88 0 c-0.62 -2.5 -2.72 -3.02 -4.3 -3.02 c-2.58 0 -4.7 2.06 -4.7 5.82 c0 2.92 0.96 5.92 4.78 5.92 c0.72 0 1.88 -0.08 2.94 -0.92 c1.26 -1 1.58 -2.28 1.58 -3.82 l-4.48 0 z M64.55600000000001 18.28 l0 1.72 l-10.6 0 l0 -14.36 l10.46 0 l0 1.72 l-8.52 0 l0 4.4 l7.86 0 l0 1.72 l-7.86 0 l0 4.8 l8.66 0 z M88.84 17.240000000000002 l0 -11.6 l1.88 0 l0 14.36 l-2.18 0 l-7.3 -11.6 l-0.04 0 l0 11.6 l-1.88 0 l0 -14.36 l2.3 0 l7.18 11.6 l0.04 0 z M108.352 12.82 c0 -3.38 -1.88 -5.84 -5 -5.84 s-5 2.46 -5 5.84 s1.88 5.84 5 5.84 s5 -2.46 5 -5.84 z M110.352 12.82 c0 3.1 -1.64 7.56 -7 7.56 s-7 -4.46 -7 -7.56 s1.64 -7.56 7 -7.56 s7 4.46 7 7.56 z M114.744 7.359999999999999 l0 -1.72 l11.66 0 l0 1.72 l-4.86 0 l0 12.64 l-1.94 0 l0 -12.64 l-4.86 0 z M142.56799999999998 13.48 l0 6.52 l-1.94 0 l0 -14.36 l9.94 0 l0 1.72 l-8 0 l0 4.4 l7.04 0 l0 1.72 l-7.04 0 z M167.23999999999998 12.82 c0 -3.38 -1.88 -5.84 -5 -5.84 s-5 2.46 -5 5.84 s1.88 5.84 5 5.84 s5 -2.46 5 -5.84 z M169.23999999999998 12.82 c0 3.1 -1.64 7.56 -7 7.56 s-7 -4.46 -7 -7.56 s1.64 -7.56 7 -7.56 s7 4.46 7 7.56 z M184.29199999999997 5.640000000000001 l1.94 0 l0 9.32 c0 2.94 -1.84 5.42 -5.78 5.42 c-3.86 0 -5.52 -2.48 -5.52 -5.16 l0 -9.58 l1.94 0 l0 9.04 c0 3.12 1.9 3.98 3.64 3.98 c1.78 0 3.78 -0.82 3.78 -3.94 l0 -9.08 z M202.16399999999996 17.240000000000002 l0 -11.6 l1.88 0 l0 14.36 l-2.18 0 l-7.3 -11.6 l-0.04 0 l0 11.6 l-1.88 0 l0 -14.36 l2.3 0 l7.18 11.6 l0.04 0 z M210.51599999999996 20 l0 -14.36 l5.82 0 c3.74 0 6.04 2.84 6.04 6.98 c0 3.22 -1.4 7.38 -6.12 7.38 l-5.74 0 z M212.45599999999996 7.300000000000001 l0 11.04 l3.76 0 c2.52 0 4.16 -1.98 4.16 -5.6 s-1.66 -5.44 -4.3 -5.44 l-3.62 0 z"></path>
+      </g>
+    </svg>
+
+  </div>
 </MainLayout>
 
 <style>
