--- a/src/pages/[lang]/blog/[category]/index.astro
+++ b/src/pages/[lang]/blog/[category]/index.astro
@@ -4,6 +4,7 @@ import { collectionMetadata } from '@content/config';
 import { languages } from '@i18n/ui';
 import MainLayout from '@layouts/MainLayout.astro';
 import BlogCard from '@components/BlogCard.astro';
+import Breadcrumbs from '@components/Breadcrumbs.astro';
 
 export async function getStaticPaths() {
 
@@ -39,6 +40,9 @@ const post = Astro.props;
   description={`Kevin Fiorentino's blog about ${post.category}`}
   image=''
 >
+  <Breadcrumbs
+    collection={param.category}
+  ></Breadcrumbs>
   <h1 class="text-gradient">
     Blog {param.category}
   </h1>
