--- a/src/components/DisplayTags.astro
+++ b/src/components/DisplayTags.astro
@@ -10,4 +10,23 @@ const lang = getLangFromUrl(Astro.url);
 const { tags } = Astro.props;
 ---
 
-{tags?.map((t) => (<a href={`/${lang}/tags/${t}`}>{t}</a>))}
+<section>
+  {
+    tags?.map((t) => (
+      <a href={`/${lang}/tags/${t}`} class="tag text-gradient mr-1" title={`Tag: ${t}`}>
+        {t}
+      </a>
+    ))
+  }
+</section>
+
+<style>
+.tag {
+  font-weight: 800;
+  text-transform: capitalize;
+}
+.tag:hover, .tag:focus {
+  text-decoration: underline;
+  text-decoration-color: var(--primary);
+}
+</style>
