Progress articles layout

--- a/src/pages/[lang]/blog/[category]/[slug].astro
+++ b/src/pages/[lang]/blog/[category]/[slug].astro
@@ -5,7 +5,7 @@ import { languages } from '@i18n/ui';
 import MainLayout from '@layouts/MainLayout.astro';
 import ArticleLayout from '@layouts/ArticleLayout.astro';
 import Breadcrumbs from '@components/Breadcrumbs.astro';
-import DisplayTags from '@components/DisplayTags.astro';
+import DisplayTagsDate from '@components/DisplayTagsDate.astro';
 
 export async function getStaticPaths() {
 
@@ -36,7 +36,7 @@ const param = Astro.params;
 const post = Astro.props.post;
 
 const { collection } = post;
-const { title, description, image, tags } = post.data;
+const { title, description, image, tags, pubDate } = post.data;
 const { Content } = await post.render();
 ---
 
@@ -49,9 +49,10 @@ const { Content } = await post.render();
     <Breadcrumbs
       collection={collection}
     ></Breadcrumbs>
-    <DisplayTags
+    <DisplayTagsDate
       tags={tags}
-    ></DisplayTags>
+      pubDate={pubDate}
+    ></DisplayTagsDate>
     <Content />
   </ArticleLayout>
 </MainLayout>
