--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<section class="grid grid-cols-3 gap-4">
+<section class="grid grid-cols-3 gap-5">
 
   <section class="col-span-3 sm:col-span-2">
     <article >
@@ -9,7 +9,7 @@
     </article>
   </section>
 
-  <section>
+  <section class="col-span-3 sm:col-span-1">
     <aside>
     </aside>
   </section>
@@ -19,7 +19,7 @@
 <style>
 aside {
   width: 100%;
-  height: 100px;
+  height: 500px;
   background-color: red;
 }
 </style>
