Move article components

--- a/src/pages/[lang]/blog/[category]/[slug].astro
+++ b/src/pages/[lang]/blog/[category]/[slug].astro
@@ -4,8 +4,8 @@ import { collectionMetadata } from '@content/config';
 import { languages } from '@i18n/ui';
 import MainLayout from '@layouts/MainLayout.astro';
 import ArticleLayout from '@layouts/ArticleLayout.astro';
-import Breadcrumbs from '@components/Breadcrumbs.astro';
-import DisplayTagsDate from '@components/DisplayTagsDate.astro';
+import Breadcrumbs from '@components/articles/Breadcrumbs.astro';
+import DisplayTagsDate from '@components/articles/DisplayTagsDate.astro';
 
 export async function getStaticPaths() {
 
