--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -11,7 +11,7 @@ import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 import LanguagePicker from '@components/LanguagePicker.astro';
 
-import '@styles/global.css';
+import '@styles/global.scss';
 
 const { title, description } = Astro.props;
 const lang = getLangFromUrl(Astro.url);
