--- a/src/pages/[lang]/tags/index.astro
+++ b/src/pages/[lang]/tags/index.astro
@@ -55,23 +55,23 @@ const tags = Astro.props.tags;
   </div>
 </MainLayout>
 
-<style>
-a {
-  color: #00539F;
-}
-
+<style lang="scss">
 .tags {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-}
 
-.tag {
-  margin: 0.25em;
-  border: dotted 1px #a1a1a1;
-  border-radius: .5em;
-  padding: .5em 1em;
-  font-size: 1.15em;
-  background-color: #F8FCFD;
+  .tag {
+    margin: 0.25em;
+    border: dotted 1px #a1a1a1;
+    border-radius: .5em;
+    padding: .5em 1em;
+    font-size: 1.15em;
+    background-color: #F8FCFD;
+
+    a {
+      color: #00539F;
+    }
+  }
 }
 </style>
