--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -1,9 +1,67 @@
-h1 {
-    color: var(--primary);
+.main-article-content {
+    h1, a {
+        color: var(--primary);
+    }
+    a:hover, a:focus {
+        opacity: .8;
+        text-decoration: underline;
+    }
+    h2 {
+        font-size: 2rem;
+    }
+    h3 {
+        font-size: 1.7rem;
+    }
+    h4 {
+        font-size: 1.5rem;
+    }
+    h5, h6 {
+        font-size: 1.2rem;
+    }
+    h2, h3, h4, h5, h5, h6 {
+        font-weight: 500;
+    }
+    img {
+        box-shadow: 0 3px 6px #00000029;
+    }
+    p {
+        margin-bottom: 15px;
+    }
+    ul {
+        list-style: none;
+        padding: revert;
+        margin-bottom: 15px;
+    }
+    ul li::before {
+        color: var(--primary);
+        content: "\2022";
+        font-weight: bold;
+        display: inline-block;
+        width: 1em;
+        margin-left: -1em;
+    }
+    pre {
+        padding: 15px;
+        margin-bottom: 15px;
+        box-shadow: 0 3px 6px #00000029;
+
+        code {
+
+        }
+    }
+    blockquote {
+        font-style: italic;
+        border-left: 3px solid var(--primary);
+        padding: 5px 0 1px 15px;
+        margin-bottom: 15px;
+    }
+    hr {
+        margin-bottom: 15px;
+    }
 }
 
-.dark {
-    h1 {
+.dark .main-article-content {
+    h2, h3, h4, h5, h5, h6, p, li {
         color: white;
     }
 }
