Content related logic

--- a/src/pages/[lang]/blog/[category]/[slug].astro
+++ b/src/pages/[lang]/blog/[category]/[slug].astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection, getEntry, getEntries } from 'astro:content';
 import { collectionMetadata } from '@content/config';
 import { languages } from '@i18n/ui';
 import MainLayout from '@layouts/MainLayout.astro';
@@ -38,8 +38,14 @@ const param = Astro.params;
 const post = Astro.props.post;
 
 const { collection } = post;
-const { title, description, image, tags, pubDate } = post.data;
+const { title, description, image, tags, pubDate, relatedPosts } = post.data;
 const { Content } = await post.render();
+
+console.log('relatedPosts', relatedPosts)
+
+const content = await getEntries(relatedPosts);
+console.log('content', content)
+
 ---
 
 <MainLayout
