--- a/src/pages/[lang]/blog/[category]/[slug].astro
+++ b/src/pages/[lang]/blog/[category]/[slug].astro
@@ -63,7 +63,7 @@ const { Content } = await post.render();
       </article>
     </section>
 
-    <section class="col-span-3 sm:col-span-1">
+    <section class="main-aside-content col-span-3 sm:col-span-1">
       <Aside
         relatedPosts={relatedPosts}
       ></Aside>
