--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -8,7 +8,7 @@ export interface Props {
     url: string,
     alt: string
   };
-  pubDate: string;
+  pubDate: Date;
 }
 
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
@@ -26,16 +26,15 @@ const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 
 const months = ['Jan','Feb','Mar','Apr','May','Jun','Jul','Aug','Sep','Oct','Nov','Dec'];
-const d = new Date(pubDate);
-const year = d.getFullYear();
-const month = months[d.getMonth()];
-const day = d.getDate();
+const year = pubDate.getFullYear();
+const month = months[pubDate.getMonth()];
+const day = pubDate.getDate();
 ---
 
 <article class="blog-card-background hover:shadow-xl">
   <a href={`/${lang}/blog/${collection}/${slug.slice(3)}`} title={ title } class="flex transition">
     <div class="rotate-180 p-2 [writing-mode:_vertical-lr]">
-      <time datetime={ pubDate } class="flex items-center justify-between text-white text-xs font-bold uppercase gap-4">
+      <time datetime={ pubDate.toString() } class="flex items-center justify-between text-white text-xs font-bold uppercase gap-4">
         <span>{ year }</span>
         <span class="w-px flex-1"></span>
         <span>{ month } { day }</span>
