Edit breadcrumb, contact page

--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -21,11 +21,34 @@ export async function getStaticPaths() {
   description="Contact to Kevin Fiorentino"
   image=''
 >
-  <h1 class="text-gradient">
-    Contact
-  </h1>
+  <section>
+    <h1 class="text-gradient">
+      Contact
+    </h1>
+    <div>
+      <div class="flex justify-center">
+
+        <!-- <div class="box max-w-max">
+          <ul>
+            <li>
+              XXX
+            </li>
+            <li>
+              XXX
+            </li>
+            <li>
+              XXX
+            </li>
+          </ul>
+        </div> -->
+
+      </div>
+    </div>
+  </section>
 </MainLayout>
 
 <style>
-
+.box {
+  border: 1px solid red;
+}
 </style>
