--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,13 +18,13 @@ const lang = getLangFromUrl(Astro.url);
 ---
 
 <!DOCTYPE html>
-<html id='kevin' class='dark' lang={lang}>
+<html id="kevin" class="dark" lang={lang}>
 	<Head
     title={title}
     description={description}
     image=''
   ></Head>
-	<body class='dark:bg-gray-900'>
+	<body class="bg-gray-100 dark:bg-gray-800">
     <Header></Header>
     <LanguagePicker></LanguagePicker>
     <main>
