--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -46,6 +46,9 @@ html {
     'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   background-color: #F6F6F6;
 }
+body {
+  min-height: 100vh;
+}
 code {
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
