--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,9 +3,9 @@ import MainLayout from '@layouts/MainLayout.astro';
 ---
 
 <MainLayout
-  title="Page not found | Kevin Fiorentino"
-  description="Page not found"
-  image=""
+  title={`Page not found | Kevin Fiorentino`}
+  description={`Page not found`}
+  image={``}
 >
   <h1 class="sr-only">
     404
