--- a/src/pages/[lang]/blog/index.astro
+++ b/src/pages/[lang]/blog/index.astro
@@ -26,9 +26,9 @@ const { collections } = Astro.props;
 ---
 
 <MainLayout
-  title="Blog | Kevin Fiorentino"
-  description="Kevin Fiorentino's personal blog"
-  image=''
+  title={`Blog | Kevin Fiorentino`}
+  description={`Kevin Fiorentino's personal blog`}
+  image={``}
 >
   <h1 class="text-gradient">
     Blog
