--- a/src/pages/[lang]/blog/[category]/[slug].astro
+++ b/src/pages/[lang]/blog/[category]/[slug].astro
@@ -44,7 +44,7 @@ const { Content } = await post.render();
 <MainLayout
   title={`${title} | Kevin Fiorentino`}
   description={`${description}`}
-  image=''
+  image={``}
 >
   <section class="grid grid-cols-3 gap-5">
 
