--- a/src/pages/[lang]/blog/[category]/index.astro
+++ b/src/pages/[lang]/blog/[category]/index.astro
@@ -37,7 +37,7 @@ const post = Astro.props;
 <MainLayout
   title={`Blog ${param.category} | Kevin Fiorentino`}
   description={`Kevin Fiorentino's blog about ${post.category}`}
-  image=''
+  image={``}
 >
   <div>
     <p class="dark:text-white">Blog</p>
@@ -61,7 +61,3 @@ const post = Astro.props;
     }
   </div>
 </MainLayout>
-
-<style>
-
-</style>
