--- a/src/pages/[lang]/tags/[tag].astro
+++ b/src/pages/[lang]/tags/[tag].astro
@@ -69,7 +69,7 @@ const props = Astro.props;
 <MainLayout
   title={`Blog ${param.tag} | Kevin Fiorentino`}
   description={`Kevin Fiorentino's blog about ${param.tag}`}
-  image=''
+  image={``}
 >
   <div>
     <p class="dark:text-white">Tag</p>
