--- a/src/pages/[lang]/tags/index.astro
+++ b/src/pages/[lang]/tags/index.astro
@@ -39,7 +39,7 @@ const tags = Astro.props.tags;
 ---
 
 <MainLayout
-  title="Tags | Kevin Fiorentino"
+  title={`Tags | Kevin Fiorentino`}
   description={`Kevin Fiorentino's tags`}
   image=''
 >
