--- a/src/pages/[lang]/contact.astro
+++ b/src/pages/[lang]/contact.astro
@@ -31,7 +31,6 @@ export async function getStaticPaths() {
     </h1>
     <div>
       <div class="flex justify-center">
-
         <div class="contact-box bg-gray-200 dark:bg-gray-900 max-w-max p-6">
           <ul>
             <li class="flex justify-start items-center mb-4">
@@ -79,10 +78,11 @@ export async function getStaticPaths() {
 
 <style lang="scss">
 .contact-box {
+  position: relative;
   border: 2px solid var(--primary);
   border-radius: 25px;
-  margin-bottom: 25px;
-  box-shadow: 0 3px 6px #00000029;
+  box-shadow: 0 8px 32px 0 rgba(20, 20, 100, 0.2);
+  margin: 15px 0;
 
   p {
     font-weight: 400;
