--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -27,7 +27,7 @@ const lang = getLangFromUrl(Astro.url);
 	<body class="bg-gray-100 dark:bg-gray-800">
     <Header></Header>
     <LanguagePicker></LanguagePicker>
-    <div class="bg-gradient flex justify-center"></div>
+    <!-- <div class="bg-gradient flex justify-center"></div> -->
     <main>
       <slot />
     </main>
@@ -59,12 +59,12 @@ main {
   padding: 1.5rem;
   max-width: 150ch;
 }
-.bg-gradient {
+/* .bg-gradient {
   position: absolute;
   width: 100%;
   height: 75vh;
   background: linear-gradient(160deg,var(--primary) 15%,var(--accent) 50%,var(--primary) 85%);
   opacity: .15;
   filter: blur(50px);
-}
+} */
 </style>
